--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
+
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+    <head>
+	    <meta charset="utf-8">
+		<title>Sedona</title>
+	</head>
+	
+	<body>
+	
+	    <header>
+		    <div class="container">
+				<nav>
+					<ul>
+						<li><a href="#">Информация</a></li>
+						<li><a href="#">Фото и видео</a></li>
+					</ul>
+					<a href="#" class="logo"><img src="#" alt=""></a>
+					<ul>
+						<li><a href="#">Карта штата</a></li>
+						<li><a href="#">Гостиницы</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="logo-page">
+				<img src="#" alt="">
+				<h1>Sedona</h1>
+				<img src="#" alt="">
+				<img src="#" alt="">
+		    </div>
+		</header>
+			
+		<section>
+		    <div class="container">
+			    <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+				<ul>
+				    <li>
+					    <strong>Настоящий городок</strong>
+						<p>№1</p>
+						<p>Седона - не аттракцион для туристов,</p> 
+						<p>там течет своя жизнь</p>
+						<img src="#" alt="">
+						<div class="items">
+						    <ul>
+								<li>
+								    <a href=""><img src="#" alt=""></a>
+									<strong>Жилье</strong>
+									<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+								</li>
+								<li>
+								    <a href=""><img src="#" alt=""></a>
+									<strong>Еда</strong>
+									<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+								</li>
+								<li>
+								    <a href=""><img src="#" alt=""></a>
+									<strong>Сувениры</strong>
+									<p>Не только китайского, но и местного производства!</p>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+					    <img src="#" alt="">
+						<strong>Там есть мост дьявола</strong>
+						<p>№2</p>
+						<p>Да, по нему можно пройти!</p>
+						<p>Если конечно вы осмелитесь</p>
+					</li>
+					<li>
+					    <strong>Небольшая площадь</strong>
+						<p>№3</p>
+						<p>Все достопримечательности</p>
+						<p>находятся очень близко</p>
+					</li>
+					<li>
+					    <strong>Красивая дорога</strong>
+						<p>№4</p>
+						<p>Ехать в Седону из Лас-Вегаса совсем</p>
+						<p>не скучно!</p>
+					</li>
+					<li>
+					    <strong>Мало туристов</strong>
+						<p>№5</p>
+						<p>Большинство едет в Гранд Каньон и</p>
+						<p>толпятся там</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		
+		<section>
+		    <div class="container">
+				<strong>Заинтересовались?</strong>
+				<p>Укажите предполагаемые даты поездки,</p>
+				<p>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+				<div class="hotel-form">
+					<strong>Поиск гостиницы в Седоне</strong>
+					<form action="№" method="post">
+						<label class="arrival-date" for="arrival-date">Дата заезда:</label>
+						<input class="arrival-date" type="date" name="calendar" value="2016-04-24" min="2016-01-26" max="2035-01-01">
+						<label class="departure-date" for="departure-date">Дата выезда:</label>
+						<input class="departure-date" type="date" name="calendar" value="2016-04-24" min="2016-01-27" max="2035-01-01">
+						<label class="adults" for="adults">Взрослые:</label>
+						<input class="adults" type="number" name="number" value="2" min="1" max="10">
+						<label class="children" for="children">Дети:</label>
+						<input class="children" type="number" name="number" value="0" min="1" max="10">
+						<input type="submit" value="Найти">
+					</form>
+				</div>
+			</div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565760471!2d-111.83015798782338!3d34.8544438154994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1453804868300" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</section>
+		
+		<footer>
+		    <section>
+			    <strong>#Visitsedona</strong>
+			</section>
+			<section>
+			    <a href="#"><img src="#" alt="twitter"></a>
+				<a href="#"><img src="#" alt="facebook"></a>
+				<a href="#"><img src="#" alt="youtube"></a>
+			</section>
+			<section>
+			    <p>Website by</p>
+			    <a href="https://htmlacademy.ru/"><img src="#" alt="htmlacademy"></a>
+			</section>
+		</footer>
+		
+	</body>
 
-  </body>
 </html>
